--- a/stiliai/iridium/_index.html
+++ b/stiliai/iridium/_index.html
@@ -37,23 +37,10 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<!-- <li class="active"><a href="index.html">Homepage</a></li>
+						<li class="active"><a href="index.html">Homepage</a></li>
 						<li><a href="left-sidebar.html">Left Sidebar</a></li>
 						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li> -->
-						<?php
-                            $limit = 6; //Kiek nuorodų rodome
-                            $menuSql  = mysql_query1( "SELECT * FROM `" . LENTELES_PRIESAGA . "page` WHERE `parent` = 0 AND `show` = 'Y' AND `lang` = " . escape(lang()) . " ORDER BY `place` ASC LIMIT " . $limit );
-                        ?>
-                        <?php foreach ($menuSql as $menuRow) { ?>
-                            <?php if (teises( $menuRow['teises'], $_SESSION[SLAPTAS]['level'])){ ?>
-                                <li>
-                                    <a href="<?php echo url('?id,' . (int)$menuRow['id']); ?>">
-                                        <?php echo input($menuRow['pavadinimas']); ?>
-                                    </a>
-                                </li>
-                            <?php } ?>
-                        <?php } ?>
+						<li><a href="no-sidebar.html">No Sidebar</a></li>
 					</ul>
 				</nav>
 			</div>
